# llm-chain

./: .gitignore  .gitmodules  404.html  CNAME  Cargo.toml  LICENSE  SECURITY.md  deny.toml  index.html  release-plz.toml  sitemap.xml
crates/llm-chain/: CHANGELOG.md  Cargo.toml  README.md
crates/llm-chain-ernie/: Cargo.toml  README.md
crates/llm-chain-ernie/examples/: simple_generator.rs
crates/llm-chain-ernie/src/: executor.rs  lib.rs  model.rs  prompt.rs
crates/llm-chain-gemma/: Cargo.toml
crates/llm-chain-gemma-sys/: Cargo.toml  a.out  build.rs  wrapper.h
crates/llm-chain-gemma-sys/src/: bindings.cc  bindings.rs  bindings_win.cc  check.cc  lib.rs
crates/llm-chain-gemma/examples/: simple.rs
crates/llm-chain-gemma/src/: context.rs  executor.rs  lib.rs
crates/llm-chain-hnsw/: .gitignore  Cargo.toml  README.md
crates/llm-chain-hnsw/examples/: dump_load.rs  similarity_search-hnsw.rs  similarity_search.rs
crates/llm-chain-hnsw/src/: lib.rs
crates/llm-chain-llama/: CHANGELOG.md  Cargo.toml  README.md
crates/llm-chain-llama/examples/: alpaca.rs  few_shot.rs  map_reduce_llama.rs  simple.rs  simple_embeddings.rs  simple_llama.rs  stream.rs
crates/llm-chain-llama/src/: batch.rs  context.rs  embeddings.rs  executor.rs  lib.rs  model.rs  options.rs  output.rs  tokenizer.rs
crates/llm-chain-llama/sys/src/: bindings.rs
crates/llm-chain-local/: CHANGELOG.md  Cargo.toml  README.md
crates/llm-chain-local/examples/: simple.rs
crates/llm-chain-local/src/: executor.rs  lib.rs  options.rs  text_splitter.rs
crates/llm-chain-macros/: Cargo.toml
crates/llm-chain-macros/src/: lib.rs
crates/llm-chain-milvus/: Cargo.toml
crates/llm-chain-milvus/examples/: milvus_vectorstore.rs  similarity_search.rs
crates/llm-chain-milvus/src/: errors.rs  lib.rs
crates/llm-chain-mock/: Cargo.toml  README.md
crates/llm-chain-mock/examples/: simple.rs
crates/llm-chain-mock/src/: executor.rs
crates/llm-chain-openai/: CHANGELOG.md  Cargo.toml
crates/llm-chain-openai/examples/: chain-from-json.json  chain-from-json.rs  conversation.rs  generator_with_parameter.rs  self_ask_with_google_search.rs  sequential_generation.rs  simple_embeddings.rs  simple_invocation.rs  simple_sequential_generation_stream.rs
crates/llm-chain-openai/src/: embeddings.rs  lib.rs
crates/llm-chain-openai/src/chatgpt/: error.rs  executor.rs  mod.rs  model.rs  options.rs  prompt.rs  text_splitter.rs
crates/llm-chain-qdrant/: CHANGELOG.md  Cargo.toml
crates/llm-chain-qdrant/examples/: qdrant_vectorstore.rs  similarity_search.rs  similarity_search_llama.rs  similarity_search_qdrant.rs  vectorstore_tool_invocation.rs
crates/llm-chain-qdrant/src/: lib.rs
crates/llm-chain-sagemaker-endpoint/: CHANGELOG.md  Cargo.toml  README.md
crates/llm-chain-sagemaker-endpoint/examples/: simple.rs
crates/llm-chain-sagemaker-endpoint/src/: executor.rs  lib.rs  model.rs
crates/llm-chain/examples/: google_serper.rs  tool_derive_describe.rs
crates/llm-chain/src/: executor.rs  frame.rs  lib.rs  options.rs  output.rs  parameters.rs  schema.rs  serialization.rs  step.rs  summarization.rs  tokens.rs  traits.rs
crates/llm-chain/src/agents/: self_ask_with_search.rs
crates/llm-chain/src/chains/: conversation.rs  map_reduce.rs  mod.rs  sequential.rs
crates/llm-chain/src/document_store/: in_memory_document_store.rs
crates/llm-chain/src/document_stores/: document_store.rs  in_memory_document_store.rs  mod.rs
crates/llm-chain/src/output/: mod.rs  stream.rs
crates/llm-chain/src/prompt/: chat.rs  (+2 more)
crates/llm-chain/tests/: test_step_hooks.rs
llm-chain/: Cargo.toml
llm-chain-llama/: Cargo.toml
llm-chain-llama/examples/: alpaca.rs  article_to_summarize.md  few-shot.rs  few_shot.rs  map_reduce_llama.rs  simple.rs  stream.rs
llm-chain-llama/src/: context.rs  context.rs.bak  executor.rs  executor.rs.bak  instruct.rs  lib.rs  options.rs  output.rs  step.rs  stream_executor.rs  text_splitter.rs  tokenizer.rs
llm-chain-llama/sys/: Cargo.toml  README.md  build.rs
llm-chain-llama/sys/src/: bindings.rs
llm-chain-openai/: Cargo.toml
llm-chain-openai/examples/: article_to_summarize.md  chain-from-json.rs  chain-from-yaml.rs  chain-from-yaml.yaml  generator_with_parameter.rs  map_reduce_long_article.rs  qdrant_vectorstore.rs  self_ask_with_search.rs  sequential_generation.rs  similarity_search.rs  simple_agent.rs  simple_generator.rs  simple_invocation.rs  simple_sequential_generation_stream.rs  vectorstore_tool_invocation.rs
llm-chain-openai/src/: embeddings.rs  lib.rs  self_ask_with_search.rs
llm-chain-openai/src/chatgpt/: executor.rs  mod.rs  options.rs  output.rs  prompt.rs  step.rs  text_splitter.rs
llm-chain-qdrant/: Cargo.toml  README.md
llm-chain-qdrant/examples/: qdrant_vectorstore.rs  similarity_search.rs  vectorstore_tool_invocation.rs
llm-chain-qdrant/src/: lib.rs
llm-chain-server/: Cargo.toml
llm-chain-server/src/: main.rs  resources.rs
llm-chain-tools/: Cargo.toml  README.md
llm-chain-tools/examples/: prompt.rs  simple_agent.rs  simple_invocation.rs
llm-chain-tools/src/: collection.rs  description.rs  lib.rs  tool.rs  tool_prompt_prefix.txt
llm-chain-tools/src/tools/: bash.rs  exit.rs  mod.rs  python.rs
llm-chain/.github/workflows/: cicd.yaml
llm-chain/examples/: bing_search.rs  extract_labeled_text.rs  multitool.rs  store_prompt.rs  tools_prompt.rs
llm-chain/src/: executor.rs  frame.rs  lib.rs  output.rs  parameters.rs  parsing.rs  prompt.rs  schema.rs  serialization.rs  step.rs  summarization.rs  templates.rs  text_splitter.rs  tokens.rs  traits.rs
llm-chain/src/agents/: mod.rs  self_ask_with_search.rs
llm-chain/src/chains/: conversation.rs  map_reduce.rs  mod.rs  sequential.rs
llm-chain/src/docstore/: in_memory.rs
llm-chain/src/prompt/: chat.rs  conversation.rs  defaults.rs  mod.rs  model.rs  serialization.rs  text.rs  traits.rs
llm-chain/src/templates/: error.rs  io.rs  legacy.rs  mod.rs  tera.rs
llm-chain/src/tools/: collection.rs  description.rs  mod.rs  multitool.rs  multitool_default.rs  tool.rs
llm-chain/src/vectorstores/: mod.rs  qdrant.rs
(+409 files in other folders)
