[workspace]
members = [
    "llm-chain",
    "llm-chain-openai",
    "llm-chain-llama",
    "llm-chain-llama/sys",
]

[workspace.metadata.release]
shared-version = true
pre-release-replacements = [
    { file = "CHANGELOG.md", search = "Unreleased", replace = "{{version}}" },
    { file = "CHANGELOG.md", search = "\\.\\.\\.HEAD", replace = "...{{tag_name}}", exactly = 1 },
    { file = "CHANGELOG.md", search = "ReleaseDate", replace = "{{date}}" },
    { file = "CHANGELOG.md", search = "<!-- next-header -->", replace = "<!-- next-header -->\n\n## [Unreleased] - ReleaseDate", exactly = 1 },
    { file = "CHANGELOG.md", search = "<!-- next-url -->", replace = "<!-- next-url -->\n[Unreleased]: https://github.com/sobelio/llm-chain/compare/{{tag_name}}...HEAD", exactly = 1 },
]
