[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.metadata.release]
shared-version = true

[patch.crates-io]
hnsw_rs = { git = "https://github.com/ruqqq/hnswlib-rs" }

[workspace.dependencies]
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
thiserror = "1.0.40"
tokio = "1.28.0"
async-trait = "0.1.68"
anyhow = "1.0.71"
lazy_static = "1.4.0"
serde_yaml = "0.9.21"
