[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.metadata.release]
shared-version = true

[workspace.dependencies]
async-trait = "0.1.68"
serde = { version = "1.0.163", features = ["derive"] }
tokio = { version = "1.28.0", features = ["rt-multi-thread"] }
serde_json = "1.0.96"
thiserror = "1.0.40"
anyhow = "1.0.71"
lazy_static = "1.4.0"
serde_yaml = "0.9.21"
