[package]
name = "llm-chain-openai"
version = "0.4.0"
edition = "2021"
description = "A library implementing `llm-chains` for OpenAI's models. Chains can be use to apply the model series to complete complex tasks, such as text summation."
license = "MIT"
keywords = ["llm", "langchain", "chatgpt", "chain"]
categories = ["science"]
authors = ["William Rudenmalm <william@sobel.io>"]
readme = "../docs/README.md"
repository = "https://github.com/sobelio/llm-chain/"

[features]
default = ["serialization"]
serialization = ["dep:serde", "llm-chain/serialization"]

[dependencies]
futures = "0.3.27"
async-openai = "0.10.0"
async-trait = "0.1.67"
llm-chain = { path = "../llm-chain", version = "0.4.0" }
serde = { version = "1.0.159", optional = true }
tiktoken-rs = { version = "0.4.0", features = ["async-openai"] }
[dev-dependencies]
tokio = "1.26.0"
