[package]
name = "llm-chain-openai"
version = "0.8.2"
edition = "2021"
description = "A library implementing `llm-chains` for OpenAI's models. Chains can be use to apply the model series to complete complex tasks, such as text summation."
license = "MIT"
keywords = ["llm", "langchain", "chatgpt", "chain"]
categories = ["science"]
authors = ["William Rudenmalm <william@sobel.io>"]
readme = "../docs/README.md"
repository = "https://github.com/sobelio/llm-chain/"

[features]

[dependencies]
futures = "0.3.28"
async-openai = "0.10.3"
async-trait = "0.1.68"
llm-chain = { path = "../llm-chain", version = "0.8.2", default-features = false }
serde = { version = "1.0.160" }
tiktoken-rs = { version = "0.4.1", features = ["async-openai"] }
thiserror = "1.0.40"
tokio = "1.27.0"

[dev-dependencies]
tokio = "1.27.0"
qdrant-client = "1.1.1"
serde_yaml = { version = "0.9.21" }
llm-chain = { path = "../llm-chain" }
