[package]
name = "llm-chain-tools"
version = "0.1.2"
edition = "2021"
description = "A library for providing Large Language Models with tools (also known as 'actions') that they can trigger"
license = "MIT"
keywords = ["llm", "langchain", "chatgpt", "chain"]
categories = ["science::artificial-intelligence"]
authors = ["William Rudenmalm <william@sobel.io>"]
readme = "README.md"
repository = "https://github.com/sobelio/llm-chain/"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.159", features = ["derive"] }
serde_yaml = "0.9.21"
llm-chain = { path = "../llm-chain", version = "0.1.2" }

[dev-dependencies]
llm-chain-openai = { path = "../llm-chain-openai" }
tokio = "1.26.0"
