[package]
name = "llm-chain-ernie"
version = "0.1.0"
edition = "2021"
description = "Use `llm-chain` with  Baidu Qianfan(Ernie/Wenxin) platform."
license = "MIT"
keywords = ["llm", "langchain", "chain"]
categories = ["science"]
authors = ["Wanqi Chen <wanqi0605@gmail.com>"]
repository = "https://github.com/sobelio/llm-chain/"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

llm-chain = { path = "../llm-chain", version = "0.13.0", default-features = false }
erniebot-rs = "0.4.1"
async-trait = "0.1.68"
serde = { version = "1.0.163", features = ["derive"] }
strum = "0.26.2"
strum_macros = "0.26.2"
tokio = { version = "1.28.0", features = ["rt-multi-thread"] }
tokio-stream = "0.1.14"
