[package]
name = "llm-chain-hnsw"
version = "0.12.3"
edition = "2021"
description = "For using hnsw with llm-chain"
license = "MIT"
keywords = ["llm", "langchain", "hnsw", "chain"]
categories = ["science"]
authors = ["William Rudenmalm <william@sobel.io>"]
readme = "README.md"
repository = "https://github.com/sobelio/llm-chain/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.68"
hnsw_rs = "0.1.19"
llm-chain = { path = "../llm-chain", version = "0.12.3", default-features = false }
serde = "1.0.164"
serde_json = "1.0.99"
thiserror = "1.0.40"
tokio = "1.28.2"

[dev-dependencies]
llm-chain-openai = { path = "../llm-chain-openai" }
