[package]
name = "llm-chain-hnsw"
version = "0.12.3"
edition = "2021"
description = "For using hnsw with llm-chain"
license = "MIT"
keywords = ["llm", "langchain", "hnsw", "chain"]
categories = ["science"]
authors = ["William Rudenmalm <william@sobel.io>"]
readme = "README.md"
repository = "https://github.com/sobelio/llm-chain/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait.workspace = true
hnsw_rs = "0.1.19"
llm-chain = { path = "../llm-chain", version = "0.12.0", default-features = false }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true

[dev-dependencies]
llm-chain-openai = { path = "../llm-chain-openai" }
