[package]
name = "llm-chain-llama"
version = "0.13.0"
edition = "2021"
description = "A library implementing `llm-chains` for LLamA. Chains can be use to apply the model series to complete complex tasks, such as agents."
license = "MIT"
keywords = ["llm", "langchain", "llama", "chain"]
categories = ["science"]
authors = [
    "Emil Juzovitski <emil@sobel.io",
    "William Rudenmalm <william@sobel.io>",
]
readme = "./README.md"
repository = "https://github.com/sobelio/llm-chain/"

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
llm-chain-llama-sys = { path = "../llm-chain-llama-sys", version = "0.13" }
llm-chain = { path = "../llm-chain", version = "0.13.0" }
serde = { version = "1.0.163", features = ["derive"] }
thiserror.workspace = true
lazy_static = "1.4.0"
tokio.workspace = true
futures = "0.3.29"

[dev-dependencies]
tokio = { version = "1.28.2", features = ["macros", "rt"] }
