[package]
name = "llm-chain-local"
version = "0.11.2"
edition = "2021"
description = "Use `llm-chain` with a local [`llm`](https://github.com/rustformers/llm) backend."
license = "MIT"
keywords = ["llm", "langchain", "ggml", "chain"]
categories = ["science"]
authors = ["Dan Forbes <dan@danforbes.dev>"]
repository = "https://github.com/sobelio/llm-chain/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.68"
llm = "0.1.1"
llm-chain = { path = "../llm-chain", version = "0.11.2", default-features = false }
rand = "0.8.5"
serde = { version = "1.0.163", features = ["derive"] }
thiserror = "1.0.40"

[dev-dependencies]
tokio = { version = "1.28.1", features = ["macros", "rt"] }
