[package]
name = "llm-chain-local"
version = "0.12.0"
edition = "2021"
description = "Use `llm-chain` with a local [`llm`](https://github.com/rustformers/llm) backend."
license = "MIT"
keywords = ["llm", "langchain", "ggml", "chain"]
categories = ["science"]
authors = ["Dan Forbes <dan@danforbes.dev>"]
repository = "https://github.com/sobelio/llm-chain/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait.workspace = true
lazy_static.workspace = true
llm = "0.1.1"
llm-chain = { path = "../llm-chain", version = "0.12.0", default-features = false }
rand = "0.8.5"
serde.workspace = true
thiserror.workspace = true

[dev-dependencies]
tokio = { version = "1.28.1", features = ["macros", "rt"] }
