[package]
name = "llm-chain-milvus"
version = "0.13.0"
edition = "2021"
license = "MIT"
description = "Driver for the Milvus vector store"
keywords = ["llm", "langchain", "ggml", "chain"]
categories = ["science"]
authors = ["William Rudenmalm <william@sobel.io>"]
repository = "https://github.com/sobelio/llm-chain/"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.72"
async-trait = "0.1.68"
llm-chain = { path = "../llm-chain", version = "0.13.0", default-features = false }
serde = "1.0.164"
serde_json = "1.0.99"
thiserror = "1.0.40"
uuid = "1.3.3"
milvus-sdk-rust = "0.1.0"

[dev-dependencies]
llm-chain-openai = { path = "../llm-chain-openai" }
tokio = "1.28.2"
serde_yaml = "0.9.27"
rand = "0.8.5"
