[package]
name = "llm-chain-mock"
version = "0.12.3"
edition = "2021"
description = "Use `llm-chain` with a mock backend. Useful for testing."
license = "MIT"
keywords = ["llm", "langchain", "chain"]
categories = ["science"]
authors = ["Shing Lyu <shing.lyu@gmail.com>"]
repository = "https://github.com/sobelio/llm-chain/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.68"
llm-chain = { path = "../llm-chain", version = "0.12.3", default-features = false }
thiserror = "1.0.40"

[dev-dependencies]
tokio = { version = "1.28.2", features = ["macros", "rt"] }
