[package]
name = "llm-chain-openai"
version = "0.12.2"
edition = "2021"
description = "A library implementing `llm-chains` for OpenAI's models. Chains can be use to apply the model series to complete complex tasks, such as text summation."
license = "MIT"
keywords = ["llm", "langchain", "chatgpt", "chain"]
categories = ["science"]
authors = ["William Rudenmalm <william@sobel.io>"]
readme = "../../docs/README.md"
repository = "https://github.com/sobelio/llm-chain/"

[features]

[dependencies]
futures = "0.3.28"
async-openai = "0.10.3"
async-trait = "0.1.68"
llm-chain = { path = "../llm-chain", version = "0.12.2", default-features = false }
serde = { version = "1.0.163" }
strum = "0.24"
strum_macros = "0.24"
thiserror = "1.0.40"
tiktoken-rs = { version = "0.4.2", features = ["async-openai"] }
tokio = "1.28.2"

[dev-dependencies]
tokio = "1.28.2"
qdrant-client = "1.2.0"
llm-chain = { path = "../llm-chain" }
anyhow = "1.0.70"
serde_yaml = "0.9.21"

