[package]
name = "llm-chain-openai"
version = "0.12.3"
edition = "2021"
description = "A library implementing `llm-chains` for OpenAI's models. Chains can be use to apply the model series to complete complex tasks, such as text summation."
license = "MIT"
keywords = ["llm", "langchain", "chatgpt", "chain"]
categories = ["science"]
authors = ["William Rudenmalm <william@sobel.io>"]
readme = "../../docs/README.md"
repository = "https://github.com/sobelio/llm-chain/"

[features]

[dependencies]
futures = "0.3.28"
async-openai = "0.16.2"
async-trait.workspace = true
llm-chain = { path = "../llm-chain", version = "0.12.0", default-features = false }
serde.workspace = true
strum = "0.24"
strum_macros = "0.24"
thiserror.workspace = true
tiktoken-rs = { version = "0.5.7" }
tokio.workspace = true

[dev-dependencies]
tokio = "1.28.2"
qdrant-client = "1.3.0"
llm-chain = { path = "../llm-chain" }
anyhow = "1.0.70"
serde_yaml = "0.9.21"
