[package]
name = "llm-chain-qdrant"
version = "0.12.3"
edition = "2021"
description = "For using Qdrant with llm-chain"
license = "MIT"
keywords = ["llm", "langchain", "qdrant", "chain"]
categories = ["science"]
authors = ["William Rudenmalm <william@sobel.io>"]
readme = "README.md"
repository = "https://github.com/sobelio/llm-chain/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
async-trait = "0.1.68"
llm-chain = { path = "../llm-chain", version = "0.12.3", default-features = false }
qdrant-client = "1.3.0"
serde = "1.0.164"
serde_json = "1.0.99"
thiserror = "1.0.40"
uuid = "1.3.3"

[dev-dependencies]
llm-chain-openai = { path = "../llm-chain-openai" }
tokio = "1.28.2"
serde_yaml = "0.9.21"
