[package]
name = "llm-chain-qdrant"
version = "0.12.3"
edition = "2021"
description = "For using Qdrant with llm-chain"
license = "MIT"
keywords = ["llm", "langchain", "qdrant", "chain"]
categories = ["science"]
authors = ["William Rudenmalm <william@sobel.io>"]
readme = "README.md"
repository = "https://github.com/sobelio/llm-chain/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
llm-chain = { path = "../llm-chain", version = "0.12.0", default-features = false }
qdrant-client = "1.1.2"
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
uuid = "1.3.3"

[dev-dependencies]
llm-chain-openai = { path = "../llm-chain-openai" }
tokio.workspace = true
serde_yaml.workspace = true
