[package]
name = "llm-chain"
version = "0.12.2"
edition = "2021"
description = "A library for running chains of LLMs (such as ChatGPT) in series to complete complex tasks, such as text summation."
license = "MIT"
keywords = ["llm", "langchain", "chatgpt", "chain"]
categories = ["science"]
authors = ["William Rudenmalm <william@sobel.io>"]
repository = "https://github.com/sobelio/llm-chain/"

[features]


[dependencies]
anyhow = "1.0.71"
async-trait = "0.1.68"
futures = "0.3.28"
serde = { version = "1.0.163", features = ["derive"] }
serde_yaml = { version = "0.9.21" }
thiserror = "1.0.40"
tokio = { version = "1.28.2", features = ["fs", "io-util", "rt", "macros"] }
markdown = { version = "1.0.0-alpha.8" }
tera = { version = "1.19.0" }
lazy_static = "1.4.0"
uuid = { version = "1.3.3", features = ["v4"] }
derive_builder = "0.12.0"
serde_json = "1.0.96"
reqwest = { version = "0.11.18", features = ["json"] }
tokio-stream = "0.1.14"
strum = "0.24.1"
strum_macros = "0.24.3"
paste = "1.0.12"

[dev-dependencies]
mockall = "0.11.4"
